--- a/resources/styles.css
+++ b/resources/styles.css
@@ -31,8 +31,13 @@ a:hover { color: #3c5dc9; text-decoration:none; }
 
 /* Slider App Styles */
 section { padding: 0 30px 30px; display: none; }
-header { overflow: hidden; color: #000; background-image: -moz-linear-gradient(top, #c5c5c5, #b0b0b0); background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #c5c5c5),color-stop(1, #b0b0b0)); border-top:1px solid #dcdcdc; border-bottom: 1px solid rgb(105, 105, 105); text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5); font-family: "Lucida Grande"; padding: 1px 10px; overflow:hidden; }
+header { overflow: hidden; color: #000; background-image: -moz-linear-gradient(top, #c5c5c5, #b0b0b0); border-top:1px solid #dcdcdc; border-bottom: 1px solid rgb(105, 105, 105); background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #c5c5c5),color-stop(1, #b0b0b0));  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5); font-family: "Lucida Grande"; padding: 1px 10px; }
 header h1 { float: left; font-size: 18px;  line-height: 32px;}
+footer {  overflow: hidden; color: #000; background-image: -moz-linear-gradient(bottom, #c5c5c5, #b0b0b0); border-bottom:1px solid #dcdcdc; border-top: 1px solid rgb(105, 105, 105); background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, #c5c5c5),color-stop(1, #b0b0b0));  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5); font-family: "Lucida Grande"; padding: 1px 10px; width: 100%;  margin: 0;  position: absolute;  left: 0;  bottom: 0; }
+footer p, footer address { margin: 0.5em;  padding: 0;  font-size: 15px;  line-height: 20px;}
+footer p { float: left; }
+footer address { float: right; margin-right: 1em;}
+footer address a { text-decoration: none !important; color: #000 !important; }
 .slide-selected { display: block; }
 .action, .action-on  { display: none; }
 
